--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ authors = ["Emile Yvan Boutet Livoff <blemille@hotmail.com>"]
 serde = "1.0.15"
 serde_derive = "1.0.15"
 serde_json = "1.0.3"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
