--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ serde = "1.0.15"
 serde_derive = "1.0.15"
 serde_json = "1.0.3"
 chrono = { version = "0.4", features = ["serde"] }
+tantivy = "0.4.3"
+tempdir = "0.3.5"
