--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 authors = ["Emile Yvan Boutet Livoff <blemille@hotmail.com>"]
 
 [dependencies]
+hyper = "0.11"
+futures = "0.1.14"
 serde = "1.0.15"
 serde_derive = "1.0.15"
 serde_json = "1.0.3"
 tantivy = "0.4.3"
 tempdir = "0.3.5"
+spin = "0.4.6"
